public/styles/global.css
:root {
    --shadow: 23px;
}

body {
    font-family: "Poppins", serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.home-body {
    background-color: white;
    overflow-x: hidden;
}

.container {
    width: 80%;
    margin: auto;
}

.header {
    background-color: #fff;
    color: #000000;
    padding: 15px;
    text-align: center;
    display: flex;
    justify-content: space-evenly;
    padding: 1%;
}

.header a {
    text-decoration: none;
    color: #000000;
    font-size: 1.2rem;
}

.anchor-wrapper {
    display: flex;
    justify-content: space-between;
    min-width: 600px;
    align-items: center;
}

.skew {
    width: 100%;
    position: relative;
}

.skew:after {
    position: absolute;
    width: 100%;
    height: 100%;
    background: inherit;
    z-index: -1;
    bottom: 0;
    content: "";
}

#skew-hero {
    background: url("https://www.amd.com/content/dam/amd/en/images/backgrounds/abstract/2990650-epyc-ai-gc-banner.jpg");
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    z-index: 1;
}

#skew-hero1 {
    background-color: white;
}

#skew-hero2 {
    position: relative;
    background-color: white;
    transform: skewY(-3deg) translateY(20px);
    height: 130px;
    /* filter: drop-shadow(rgba(2, 2, 2, 0.438) 1rem 1rem 5px); */
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
    -webkit-box-shadow: 0px var(--shadow) var(--shadow) calc(var(--shadow)*-1) rgba(0,0,0,1);
    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
}

#skew-hero1:after {
    transform-origin: right bottom;
    transform: skewY(-3deg);
}

#skew-hero:after {
    transform-origin: left bottom;
    transform: skewY(2.5deg);
}

.image-section-skew {
    display: flex;
    flex-direction: column-reverse;
}


.content {
    font-weight: bold;
    text-align: center;
    padding: 150px 50px;
    overflow: hidden;
    height: auto;
}

.content h2 {
    margin: 0;
    color: #fff;
    text-transform: uppercase;
    font-size: 60px;
}

.content h3 {
    margin: 0;
    color: #000000;
    text-transform: uppercase;
    font-size: 40px;
}

.content p {
    padding: 0 300px;
    line-height: 1.5;
    color: #000000;
}

.content a {
    color: #fff;
    text-decoration: none;
    background: #039dc8;
    display: inline-block;
    font-size: 16px;
    padding: 10px 25px;
    margin-top: 20px;
}

.image-section {
    background-color: #000000;
    min-height: 50vh;
}

.image-section-content {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);
    padding: 2rem;
}

.image-section-content h2 {
    color: var(--color-button);
}

.image-section-content img {
    max-width: 100%;
    height: 100%;
    object-fit: cover;
}

.grid-container-1 {
    grid-area: 1 / 1 / 3 / 3;
}

.grid-container-2 {
    grid-area: 1 / 3 / 2 / 4;
}

.grid-container-3 {
    grid-area: 1 / 4 / 2 / 5;
}

.grid-container-4 {
    grid-area: 2 / 3 / 3 / 4;
}

.grid-container-5 {
    grid-area: 2 / 4 / 3 / 5;
}

.image-section-content .grid-container {
    position: relative;
}

.image-section-content .grid-container::before {
    position: absolute;
    content: "";
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: black;
    opacity: 0;
    transition: all 0.3s ease;
}

.grid-text-container {
    position: absolute;
    left: 2rem;
    bottom: 2rem;
    right: 2rem;
    color: white;
}


.grid-container:hover::before {
    opacity: .5;
}

.grid-container:hover .grid-text-container-description {
    opacity: 1;
}

.grid-container {
    overflow: hidden;
}

.grid-container img {
    transition: transform 0.3s ease-in-out;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.grid-container:hover img {
    transform: scale(1.1);
}


.grid-container .grid-text-container {
    transform: translateY(calc(100% - 25px));
    transition: all .3s ease;
}

.grid-container:hover .grid-text-container {
    transform: translateY(0);
}

.grid-text-container-title {
    font-size: 1.3rem;
}

.grid-text-container-description {
    font-size: .6rem;
    opacity: 0;
    transition: all .3s ease;
    text-align: justify;
}

.footer-wrapper {
    background-color: white;
    display: flex;
    justify-content: space-evenly;
    padding: 40px;
}

.company img {
    width: 100px;
}

.browse,
.services,
.contact,
.company {
    display: flex;
    flex-direction: column;
    max-width: 300px;
}

.footer-wrapper a, p {
    text-decoration: none;
    color: rgb(138, 130, 130);
}

.copyright {
    width: 100%;
    display: flex;
    justify-content: space-between;
    background-color: whitesmoke;
    align-items: center;
}

.copyright a {
    margin-right: 15px;
    text-decoration: none;
}

.copyright p {
    margin-left: 15px;
}

.contact img {
    width: 25px;
    object-fit: contain;
    margin-right: 20px;
}

.contact div {
    display: flex;
}

@media screen and (max-width: 768px) {
    .container {
        width: 90%;
        margin: auto;
    }

    .header {
        flex-direction: column;
        text-align: center;
        padding: 10px;
    }

    .header a {
        font-size: 1rem;
        margin: 5px 0;
    }

    .anchor-wrapper {
        flex-direction: column;
        min-width: unset;
    }

    .content {
        padding: 80px 20px;
    }

    .content h2 {
        font-size: 30px;
    }

    .content h3 {
        font-size: 24px;
    }

    .content p {
        padding: 0 20px;
        font-size: 14px;
    }

    .image-section-content {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(3, 1fr);
        gap: 10px;
        padding: 1rem;
    }

    .grid-container-1 {
        grid-area: 1 / 1 / 2 / 3;
    }

    .grid-container-2,
    .grid-container-3,
    .grid-container-4,
    .grid-container-5 {
        grid-area: auto;
    }

    .footer-wrapper {
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding: 20px;
    }

    .browse,
    .services,
    .contact,
    .company {
        max-width: 100%;
        margin-bottom: 20px;
    }

    .copyright {
        flex-direction: column;
        text-align: center;
        padding: 10px;
    }

    .copyright p,
    .copyright a {
        margin: 5px 0;
    }

    .company img {
        align-self: center;
    }
}

